--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-
+      react-app"
     />
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
